<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mobilForum</string>
    <string name="action_settings">Einstellungen</string>
    <string name="title_activity_post">Eintrag posten</string>
    <string name="title_activity_read_entries">ReadEntriesActivity</string>
    <string name="topic">Thema</string>
    <string name="category">Kategorie</string>
    <string name="entrytext">Text</string>
    <string name="timestamp">timestamp</string>
    <string name="moreButtonCaption">mehr</string>
    <string name="name">Name</string>
    <string name="time">Zeit</string>
    <string name="date">Datum</string>
    <string name="username">Username</string>
    <string name="password">Passwort</string>
    <string name="passwordconfirm">Passwort bestätigen</string>
    <string name="next">Weiter</string>
    <string name="title_reg_username">Username</string>
    <string name="alert_reg_username">Username ungültig oder bereits vergeben!</string>
    <string name="title_reg_input_error">Ungültige Eingabe</string>
    <string name="alert_reg_input_error">Bitte überprüfe deine Eingabe</string>
  	<string name="register">Registrieren</string>
    <string name="title_reg">Titel</string>
    <string name="alert_reg">Benutzername bereits vergeben!</string>
    <string name="title_activity_topic_post">New Topic</string>

    <string name="title_activity_topic_list">TopicListActivity</string>
    <string name="title_section1">Category 1</string>
    <string name="title_activity_topic_list_activity_new">TopicListActivityNew</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_fragment">FragmentActivity</string>
    <string name="title_activity_swipe">SwipeActivity</string>

    <string name="Reply">Reply</string>
    <string name="Login">Login</string>
    <string name="Logout">Logout</string>
    <string name="log_success">Erfolgreich eingeloggt!</string>
    <string name="log_incorrect">Login fehlgeschlagen!</string>
    <string name="test_cancel">Abbrechen</string>
    <string name="title_activity_read_topics">ReadTopicsActivity</string>
    
    <string name="dialog_uname">Username</string>
    <string name="dialog_upassword">Passwort</string>
    <string name="dialog_submit">Los gehts!</string>
    <string name="dialog_cancel">Abbrechen</string>
    <string name="dialog_password">password</string>
    <string name="dialog_imageupload">Bild hochladen</string>
    <string name="imageUploadButtonText">Bild</string>
    <string name="menu_register">menu_register</string>
    <string name="uploadImagebtn">Bild</string>
    
</resources>