<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/Category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Topic"
        android:layout_alignBottom="@+id/Topic"
        android:layout_alignParentRight="true"
        android:layout_marginRight="24dp"
        android:text="@string/category" />

    <ImageView
        android:contentDescription="Avatar"
        android:id="@+id/avatarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Topic"
        android:layout_below="@+id/Topic"
        android:src="@drawable/userpic" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/avatarView"
        android:layout_below="@+id/avatarView"
        android:layout_marginTop="16dp"
        android:text="@string/date" />

    <TextView
        android:id="@+id/entryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/dateTextView"
        android:layout_marginLeft="53dp"
        android:layout_toRightOf="@+id/dateTextView"
        android:text="@string/entrytext" />

    <TextView
        android:id="@+id/Topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:text=">" />

    <Button
        android:id="@+id/more"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/entryTextView"
        android:layout_alignRight="@+id/Category"
        android:text=">" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/avatarView"
        android:layout_below="@+id/avatarView"
        android:text="@string/name" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dateTextView"
        android:layout_below="@+id/dateTextView"
        android:text="@string/time" />

</RelativeLayout>